added products + fixed some prices
need to merge the product and add a combo box for choosing number of cup cookies

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
     </div>
 
     <div class="product">
+      <h3>كب كوكيز 6 حبات</h3>
+      <p>24 SAR</p>
+        <button onclick="addToCart('كب كوكيز', 24)">
+      إضافة للسلة
+ </a>
+    </div>
+
+    <div class="product">
+      <h3>كب كوكيز 12 حبة </h3>
+      <p>48 SAR</p>
+        <button onclick="addToCart('كب كوكيز', 48)">
+      إضافة للسلة
+ </a>
+    </div>
+
+    <div class="product">
+      <h3>كب كوكيز 24 حبة</h3>
+      <p>96 SAR</p>
+        <button onclick="addToCart('كب كوكيز', 96)">
+      إضافة للسلة
+ </a>
+    </div>
+
+    <div class="product">
       <h3>سخان كوكيز صغير</h3>
       <p>30 SAR</p>
          <button onclick="addToCart('سخان كوكيز صغير', 30)">
@@ -69,8 +93,16 @@
 
     <div class="product">
       <h3>سخان كوكيز كبير</h3>
-      <p>85 SAR</p>
-        <button onclick="addToCart('سخان كوكيز كبير', 85)">
+      <p>95 SAR</p>
+        <button onclick="addToCart('سخان كوكيز كبير', 95)">
+      إضافة للسلة
+ </a>
+    </div>
+
+    <div class="product">
+      <h3>سخان كوكيز كبير مع إضافة زينة وكتابة</h3>
+      <p>105 SAR</p>
+        <button onclick="addToCart('سخان كوكيز كبير', 105)">
       إضافة للسلة
  </a>
     </div>
@@ -111,3 +143,4 @@
 </body>
 
 </html>
+
